--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+  <link rel="stylesheet" href="/src/style.css"> </head>
+
+<body>
+
+  <div id="app" class="container">
+    <header>
+      <div>
+        <a href="/dashboard">Dashboard</a>
+        <a href="/users">Usuarios</a>
+      </div>
+      <button class="btn-danger" onclick="logout()">Logout</button>
+    </header>
+  </div>
+  <script type="module" src="/src/main.js"></script>
+
+  <script>
+    function logout() {
+      localStorage.removeItem('loggedInUser');
+      window.location.href = '/login';
+    }
+  </script>
+</body>
+
 </html>
